@@ -454,6 +454,9 @@ Release 2.1.0-beta - UNRELEASED
 
     YARN-761. TestNMClientAsync fails sometimes (Zhijie Shen via bikas)
 
+    YARN-760. NodeManager throws AvroRuntimeException on failed start.
+    (Niranjan Singh via jlowe)
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     YARN-158. Yarn creating package-info.java must not depend on sh.
